<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="128dp">

    <ImageView
        android:id="@+id/ivLogoPromocion"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:contentDescription="Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNamePromocion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvGasolinerasAsociadas"
        app:layout_constraintTop_toTopOf="@+id/ivLogoPromocion" />

    <TextView
        android:id="@+id/tvNameGasolinera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="5"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvGasolinerasAsociadas"
        app:layout_constraintTop_toBottomOf="@+id/tvGasolinerasAsociadas" />

    <TextView
        android:id="@+id/tvDescuento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvCombustiblesAsociados"
        app:layout_constraintTop_toTopOf="@+id/tvNamePromocion" />

    <TextView
        android:id="@+id/tvCombustible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/tvCombustiblesAsociados"
        app:layout_constraintTop_toTopOf="@+id/tvNameGasolinera" />

    <TextView
        android:id="@+id/tvGasolinerasAsociadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="5"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/tvCombustiblesAsociados"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivLogoPromocion"
        app:layout_constraintTop_toBottomOf="@+id/tvNamePromocion" />

    <TextView
        android:id="@+id/tvCombustiblesAsociados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/ivBin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvGasolinerasAsociadas"
        app:layout_constraintTop_toTopOf="@+id/tvGasolinerasAsociadas" />

    <ImageView
        android:id="@+id/ivBin"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:onClick="deletePromotionSelected"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogoPromocion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCombustiblesAsociados"
        app:layout_constraintTop_toTopOf="@+id/ivLogoPromocion"
        app:srcCompat="@drawable/bin" />

</androidx.constraintlayout.widget.ConstraintLayout>