...
    <item
        android:id="@+id/menuFilter"
        android:icon="@drawable/filter_gas"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuPromotion"
        android:icon="@drawable/descuento"
        android:title="@string/promotion"
        app:showAsAction="ifRoom">
        <!-- "file" submenu -->
        <menu>
            <item
...
